tests/negative/barrel_file_only_imports.glyph
module neg

import std/io
import std/result { Result, Ok, Err }
